# microvtk

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  check_deps.cmake  plan.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
benchmarks/: bench_adapters.cpp  bench_formatting.cpp  benchmark_main.cpp
cmake/: FindKokkos.cmake
examples/: basic_usage.cpp  complex_grid.cpp  compression.cpp  hpc_adapters.cpp  time_series.cpp
include/microvtk/: adapter.hpp  cabana_adapter.hpp  kokkos_adapter.hpp  microvtk.hpp  pvd_writer.hpp  vtu_writer.hpp
include/microvtk/common/: types.hpp
include/microvtk/core/: binary_utils.hpp  compressor.hpp  data_accessor.hpp  xml_utils.hpp
tests/: test_adapter.cpp  test_adapter_kokkos_cabana.cpp  test_binary_utils.cpp  test_compression.cpp  test_coverage_gap.cpp  test_main.cpp  test_pvd_writer.cpp  test_types.cpp  test_vtu_validation.cpp  test_vtu_writer.cpp  test_xml_utils.cpp
tests/integration/: test_compatibility.py
